// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`receipt mutations createReceipt should match snapshot 1`] = `
Object {
  "data": Object {
    "createReceipt": Object {
      "category": null,
      "comment": null,
      "createdAt": "2000-01-01",
      "currency": "EUR",
      "id": "1",
      "isSettlement": false,
      "paidAt": "2000-01-01",
      "paidBy": Object {
        "avatarUrl": "http://...",
        "email": "email@email.com",
        "firstName": "first",
        "id": "1",
        "lastName": "ast",
        "state": "ACTIVE",
      },
      "splits": Array [
        Object {
          "currency": "EUR",
          "owingTo": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "user": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "value": 10,
        },
        Object {
          "currency": "EUR",
          "owingTo": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "user": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "value": 10,
        },
      ],
      "title": "first receipt",
      "total": 20,
      "updatedAt": "2000-01-01T00:00:00.000Z",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`receipt mutations deleteReceipt should match snapshot 1`] = `
Object {
  "data": Object {
    "deleteReceipt": Object {
      "category": null,
      "comment": null,
      "createdAt": "2000-01-01",
      "currency": "EUR",
      "id": "1",
      "isSettlement": false,
      "paidAt": "2000-01-01",
      "paidBy": Object {
        "avatarUrl": "http://...",
        "email": "email@email.com",
        "firstName": "first",
        "id": "1",
        "lastName": "ast",
        "state": "ACTIVE",
      },
      "splits": Array [
        Object {
          "currency": "EUR",
          "owingTo": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "user": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "value": 10,
        },
        Object {
          "currency": "EUR",
          "owingTo": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "user": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "value": 10,
        },
      ],
      "title": "first receipt",
      "total": 20,
      "updatedAt": "2000-01-01T00:00:00.000Z",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`receipt mutations updateReceipt should match snapshot 1`] = `
Object {
  "data": Object {
    "updateReceipt": Object {
      "category": null,
      "comment": null,
      "createdAt": "2000-01-01",
      "currency": "EUR",
      "id": "1",
      "isSettlement": false,
      "paidAt": "2000-01-01",
      "paidBy": Object {
        "avatarUrl": "http://...",
        "email": "email@email.com",
        "firstName": "first",
        "id": "1",
        "lastName": "ast",
        "state": "ACTIVE",
      },
      "splits": Array [
        Object {
          "currency": "EUR",
          "owingTo": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "user": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "value": 10,
        },
        Object {
          "currency": "EUR",
          "owingTo": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "user": Object {
            "avatarUrl": "http://...",
            "email": "email@email.com",
            "firstName": "first",
            "id": "1",
            "lastName": "ast",
            "state": "ACTIVE",
          },
          "value": 10,
        },
      ],
      "title": "first receipt",
      "total": 20,
      "updatedAt": "2000-01-01T00:00:00.000Z",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
